@@ -1,3 +1,11 @@
+2011-09-12  Guillaume Lazzara  <z@lrde.epita.fr>
+
+	Fix Portfile related dependencies.
+
+	* Makefile.am: Improve Portfile dependencies.
+
+	* distrib/macports/Portfile.in: Add package dependencies.
+
 2011-09-09  Guillaume Lazzara  <z@lrde.epita.fr>
 
 	Generate a valid Portfile for MacPorts support.
